--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,24 @@ body {
   background: linear-gradient(rgb(17, 124, 31), rgb(7, 51, 13));
 }
 
+@keyframes waku {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.05);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  75% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 .main-box span {
   width: 250px;
   height: 35px;
@@ -52,6 +70,12 @@ body {
   text-shadow: 2px 2px rgb(247, 123, 0), 3px 3px rgb(122, 61, 0);
   background-color: rgba(255, 255, 255, 0.884);
   box-shadow: 5px 5px green;
+  animation: waku 1s infinite;
+}
+
+.main-box span:nth-child(2) {
+  animation: waku 1s infinite;
+  animation-delay: 0.5s;
 }
 
 .main-box span:last-child {
@@ -88,4 +112,22 @@ body {
   );
   cursor: pointer;
   border-radius: 10px;
+}
+
+.nav-box div:nth-child(1):hover,
+.nav-box div:nth-child(2):hover,
+.nav-box div:nth-child(3):hover,
+.nav-box div:nth-child(4):hover,
+.nav-box div:nth-child(5):hover {
+  background: linear-gradient(
+    to left,
+    rgb(10, 63, 17) 12.5%,
+    rgb(4, 27, 7) 12.5% 25%,
+    rgb(10, 63, 17) 25% 37.5%,
+    rgb(4, 27, 7) 37.5% 50%,
+    rgb(10, 63, 17) 50% 62.5%,
+    rgb(4, 27, 7) 62.5% 75%,
+    rgb(10, 63, 17) 75% 87.5%,
+    rgb(4, 27, 7) 87.5% 100%
+  );
 }
