--- a/css/mim.css
+++ b/css/mim.css
@@ -1,29 +1,128 @@
+.come-contain {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  font-family: var(--japan);
+}
+
+.come-in span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 20px;
+  background-color: rgb(31, 22, 17);
+  margin-top: 3px;
+  opacity: 0.8;
+  border-radius: 5px;
+}
+
 .to-me_all {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100%;
+  font-family: var(--japan);
 }
 
 .to-me {
   display: flex;
   align-items: flex-start;
-  width: 100%;
-}
-
-.to-me_own {
-  display: flex;
-  justify-content: flex-end;
+  width: 90%;
+  margin-left: 40px;
+  animation: out 0.8s ease-in-out;
 }
 
 .to-me_list {
   display: flex;
+  align-items: center;
   width: 100%;
 }
 
+.to-me_list span:first-child {
+  border-left: 3px solid rgb(187, 244, 96);
+  border-radius: 5px;
+}
+
+.to-me_list img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+}
+
 .to-me_span {
-  text-align: center;
-  background-color: rgb(248, 223, 153);
-  font-size: 25px;
-  width: 40%;
-  height: 31px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(250, 185, 101);
+  font-size: 26px;
+  width: 45%;
+  height: 90px;
+  box-shadow: 5px 5px rgb(172, 128, 70);
+  text-shadow: 2px 2px rgb(172, 128, 70);
+  border-bottom-left-radius: 17px;
+  border-top-right-radius: 17px;
+  border-bottom-right-radius: 17px;
+  margin-left: 5px;
+}
+
+.to-me_own {
+  display: flex;
+  width: 90%;
+  margin-right: 40px;
+  animation: info 0.8s ease-in-out;
+}
+.to-me_list-own {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+}
+.to-me_span-own {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(230, 205, 123);
+  font-size: 26px;
+  width: 45%;
+  height: 90px;
+  box-shadow: 5px 5px rgb(163, 146, 89);
+  text-shadow: 2px 2px rgb(163, 146, 89);
+  border-bottom-left-radius: 17px;
+  border-top-left-radius: 17px;
+  border-bottom-right-radius: 17px;
+  margin-right: 5px;
+}
+
+.to-me_list-own img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+}
+
+.to-me_list-own span:last-child {
+  border-right: 3px solid rgb(96, 244, 175);
+  border-radius: 5px;
+}
+
+@keyframes out {
+  from {
+    transform: translateX(-50px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes info {
+  from {
+    transform: translateX(50px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
